--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="color_a61008">#a61008</color>
     <color name="color_f6382e">#f6382e</color>
     <color name="color_5bb531">#5bb531</color>
+    <color name="color_995bb531">#995bb531</color>
 </resources>
